--- a/item_request/views/purchase_requisition_view.xml
+++ b/item_request/views/purchase_requisition_view.xml
@@ -52,34 +52,33 @@
                                 <field name="requisition_line_ids" >
                                     <tree editable="bottom">
                                         <field name="requisition_type" groups="item_request.group_purchase_requisition_user,
-                                        item_request.group_purchase_requisition_manager,
                                         item_request.group_purchase_requisition_department" readonly="0"/>
-                                        <field name="product_id" attrs="{'readonly': [('parent_state', 'not in', ['draft'])]}"/>
-                                        <field name="description" attrs="{'readonly': [('parent_state', 'not in', ['draft'])]}"/>
-                                        <field name="qty" attrs="{'readonly': [('parent_state', 'not in', ['draft'])]}"/>
-                                        <field name="uom" attrs="{'readonly': [('parent_state', 'not in', ['draft'])]}"/>
+                                        <field name="product_id" attrs="{'readonly': [('parent_state', 'not in', ['draft', 'dept_confirm', 'ir_approve'])]}"/>
+                                        <field name="description" attrs="{'readonly': [('parent_state', 'not in', ['draft', 'dept_confirm', 'ir_approve'])]}"/>
+                                        <field name="qty" attrs="{'readonly': [('parent_state', 'not in', ['draft', 'dept_confirm', 'ir_approve'])]}"/>
+                                        <field name="uom" attrs="{'readonly': [('parent_state', 'not in', ['draft', 'dept_confirm', 'ir_approve'])]}"/>
                                         <field name="parent_state" invisible="1"/>
-                                        <field name="partner_id" groups="item_request.group_purchase_requisition_user,purchase.group_purchase_user,material_purchase_requisitions.group_purchase_requisition_manager,material_purchase_requisitions.group_purchase_requisition_department" attrs="{'readonly': [('requisition_type', '!=', 'purchase')]}" widget="many2many_tags"/>
+                                        <field name="partner_id" groups="item_request.group_purchase_requisition_user,item_request.group_purchase_requisition_department" attrs="{'readonly': [('requisition_type', '!=', 'purchase')]}" widget="many2many_tags"/>
                                     </tree>
                                 </field>
                                 <group>
                                     <field name="reason" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}" placeholder="Add Reason for Internal Requistion ...."/>
                                 </group>
                             </page>
-                            <page groups="material_purchase_requisitions.group_purchase_requisition_user,stock.group_stock_user" string="Picking Details" attrs="{'readonly': [['state', 'in', ['done']]]}">
+                            <page string="Picking Details" attrs="{'readonly': [['state', 'in', ['done']]]}">
                                 <group>
                                     <group>
                                             <field name="location_id"
-                                                   groups="material_purchase_requisitions.group_purchase_requisition_user,stock.group_stock_user" 
+                                                   groups="item_request.group_purchase_requisition_user,stock.group_stock_user"
                                                    domain="[('usage','!=', 'view')]" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
                                                     options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
                                     </group>
                                     <group>
-                                        <field name="dest_location_id" groups="material_purchase_requisitions.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
+                                        <field name="dest_location_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
                                         options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
-                                        <field name="delivery_picking_id" groups="material_purchase_requisitions.group_purchase_requisition_user,stock.group_stock_user"
+                                        <field name="delivery_picking_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user"
                                         options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
-                                        <field name="custom_picking_type_id" groups="material_purchase_requisitions.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
+                                        <field name="custom_picking_type_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
                                         options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
                                     </group>
                                 </group>
