--- a/item_request/views/hr_employee_view.xml
+++ b/item_request/views/hr_employee_view.xml
@@ -7,7 +7,7 @@
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//notebook/page[last()]" position="after">
-                     <page name="purchase_settings" string="Purchase Requisition Settings">
+                     <page name="purchase_settings" string="Item Requests Settings">
                         <group>
                             <group>
                                 <field name="dest_location_id" options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
