--- a/item_request/views/purchase_requisition_view.xml
+++ b/item_request/views/purchase_requisition_view.xml
@@ -12,12 +12,12 @@
                         <button name="manager_approve" type="object" string="Department Approve" states="dept_confirm,cancel" class="btn-primary" groups="item_request.group_purchase_requisition_department"/>
                         <button name="user_approve" type="object" string="Approve" states="ir_approve" class="btn-primary" groups="item_request.group_purchase_requisition_user"/>
                         <button name="request_stock" type="object" string="Create Picking and PO" states="approve" class="btn-primary" groups="item_request.group_purchase_requisition_user"/>
-                        <button name="action_received" type="object" string="Received" states="stock" class="btn-primary"/>
+<!--                        <button name="action_received" type="object" string="Received" states="stock" class="btn-primary"/>-->
                         <button name="requisition_reject" type="object" string="Reject" groups="item_request.group_purchase_requisition_department,item_request.group_purchase_requisition_user" states="dept_confirm,approve,ir_approve" />
                         <button name="action_cancel" type="object" states="draft" string="Cancel" groups="base.group_user"/>
-                        <button name="reset_draft" type="object" string="Reset to Draft" states="cancel,reject,receive" class="btn-primary"/>
+                        <button name="reset_draft" type="object" string="Reset to Draft" states="cancel,reject" class="btn-primary"/>
                         <field name="state" widget="statusbar" string="confirm"  
-                                        statusbar_visible="draft,dept_confirm,ir_approve,approve,stock,receive"/>
+                                        statusbar_visible="draft,dept_confirm,ir_approve,approve,stock"/>
                     </header>
                     <sheet>
                     <div class="oe_button_box" name="button_box">
@@ -42,9 +42,12 @@
                                 </group>
                                 <group>
                                     <field name="request_date" string="Request Date" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
-                                    <field name="receive_date" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"/>
-                                    <field name="date_end" string="Request Deadline" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"/>
+<!--                                    <field name="receive_date" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"/>-->
+                                    <field name="date_end" string="Request Deadline" attrs="{'readonly': [['state', 'in', ['reject','cancel']]]}"/>
                                     <field name="analytic_account_id" groups="analytic.group_analytic_accounting" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}" options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
+                                <field name="is_employee" invisible="1"/>
+                                <field name="is_manager" invisible="1"/>
+                                <field name="is_account" invisible="1"/>
                                 </group>
                              </group>
                         <notebook>
@@ -62,7 +65,7 @@
                                     </tree>
                                 </field>
                                 <group>
-                                    <field name="reason" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}" placeholder="Add Reason for Internal Requistion ...."/>
+                                    <field name="reason" attrs="{'readonly': [['state', 'in', ['reject','cancel']]]}" placeholder="Add Reason for Internal Requistion ...."/>
                                 </group>
                             </page>
                             <page string="Picking Details" attrs="{'readonly': [['state', 'in', ['done']]]}">
@@ -70,15 +73,15 @@
                                     <group>
                                             <field name="location_id"
                                                    groups="item_request.group_purchase_requisition_user,stock.group_stock_user"
-                                                   domain="[('usage','!=', 'view')]" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
+                                                   domain="[('usage','!=', 'view')]" attrs="{'readonly': [['state', 'in', ['reject','cancel']]]}"
                                                     options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
                                     </group>
                                     <group>
-                                        <field name="dest_location_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
+                                        <field name="dest_location_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel']]]}"
                                         options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
                                         <field name="delivery_picking_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user"
                                         options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
-                                        <field name="custom_picking_type_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel','receive']]]}"
+                                        <field name="custom_picking_type_id" groups="item_request.group_purchase_requisition_user,stock.group_stock_user" attrs="{'readonly': [['state', 'in', ['reject','cancel']]]}"
                                         options="{'no_quick_create': True, 'no_create_edit':True, 'no_open': True, 'no_create': True}"/>
                                     </group>
                                 </group>
@@ -140,7 +143,7 @@
                     <field name="location_id"/>
                     <field name="managerapp_date"/>
                     <field name="userrapp_date"/>
-                    <field name="receive_date"/>
+<!--                    <field name="receive_date"/>-->
                     <field name="date_done"/>
                     <field name="dest_location_id"/>
                     <field name="delivery_picking_id"/>
@@ -174,7 +177,7 @@
             <field name="view_mode">tree,form</field>
         </record>
         
-        <menuitem id="menu_purchase_requisition" name="Item Request"/>
+        <menuitem id="menu_purchase_requisition" name="Item Requests" groups="item_request.group_purchase_requisition_user,item_request.group_purchase_requisition_manager,item_request.group_purchase_requisition_department"/>
         <menuitem id="menu_item_purchase_requisition" name="Item Request" parent="menu_purchase_requisition"/>
         <menuitem id="menu_action_purchase_requisition" name="Item Request" parent="menu_item_purchase_requisition" action="action_material_purchase_requisition"/>
         
